# kind-python-project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deployment.yaml  ingress.yaml  pyproject.toml  service.yaml
.devcontainer/: devcontainer.json  setup.sh  start-kind.bat  start-kind.sh
kind-python-project/: pyproject.toml
