[project]
name = "kind-python-project"
version = "0.1.0"
description = ""
authors = [
    {name = "SvetlanaRomaniuk111",email = "126294774+SvetlanaRomaniuk111@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "kind_python_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
